--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="shortcut icon" href="./images/fingers.svg" />
+    <title>KidsLike</title>
   </head>
   <body>
     <div id="root"></div>
